--- a/Acme.BookStore.HttpApi.Host/Acme.BookStore.HttpApi.Host.csproj
+++ b/Acme.BookStore.HttpApi.Host/Acme.BookStore.HttpApi.Host.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.3.0" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.0" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.3.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>    
   </ItemGroup>
 
   <ItemGroup>
